--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib-tcp-udp"]
-	path = lib-tcp-udp
+[submodule "libtcpudp"]
+	path = libtcpudp
 	url = https://github.com/cannudo/tcp-udp-dsd.git
